# social

./: .flake8  .gitignore  cert.crt  cert.key  openssl.cnf  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml
bookmarks/: cert.crt  cert.key  db.sqlite3
bookmarks/account/: authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py  0002_contact_contact_account_con_created_8bdae6_idx.py  0003_alter_profile_photo.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  login.html
bookmarks/account/templates/account/user/: detail.html  list.html
bookmarks/account/templates/registration/: login.html
bookmarks/actions/: utils.py
bookmarks/actions/migrations/: 0001_initial.py
bookmarks/bookmarks/: settings.py  urls.py
bookmarks/images/: forms.py  models.py  urls.py  views.py
bookmarks/images/migrations/: 0001_initial.py  0002_rename_useer_image_user.py  0003_image_total_likes_and_more.py
bookmarks/images/templates/images/image/: create.html  detail.html  list.html
bookmarks/media/images/2025/07/22/: .jpg_G9Zs9tk  .jpg_YrFXszl  .jpg_noaokHM
