[project]
name = "social"
version = "0.1.1"
description = "Social network application from Antonio Melé's book Django 4 By Example."
authors = [
    {name = "Aleksan.Jhangiryan",email = "lernagorc90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "asgiref (==3.5.2)",
    "django (>=4.1.0,<4.2.0)",
    "pillow (==9.2.0)",
    "sqlparse (==0.4.2)",
    "social-auth-app-django (>=5.4.0,<5.5.0)",
    "social-auth-core (>=4.6.1,<4.7.0)",
    "django-extensions (>=3.2.0,<3.3.0)",
    "werkzeug (==2.2.2)",
    "pyopenssl (>=24.0.0,<24.1.0)",
    "cryptography (>=42.0.8,<42.1.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (==2.28.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8-bugbear = "24.4.26"
flake8-comprehensions = "3.14.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
skip = ["migrations", ".venv", "venv"]